# CSCi1300-23-HW5

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  problem5.cpp  treasure.cpp
test/: CMakeLists.txt  treasure_tests.cpp
